@@ -11,21 +11,27 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+/**
+ * Controller that handles API endpoints for community alerts and fire station related queries.
+ */
 @RestController
 public class ApiController {
 
     @Autowired
     private PersonService personService;
     @Autowired
-    private MedicalRecordService medicalRecordService;
-    @Autowired
     private FireStationService fireStationService;
     @Autowired
     private PersonInfoService personInfoService;
 
+    /**
+     * Get a list of community email addresses for a given city.
+     *
+     * @param city the name of the city for which emails are to be fetched
+     * @return a list of email addresses in the specified city, or an empty list if no emails are found
+     */
     @GetMapping("/communityEmail")
     public ResponseEntity<List<String>> getCommunityEmail(@RequestParam String city) {
         List<String> emailList = personService.getAllEmailByCity(city);
@@ -36,6 +42,12 @@ public class ApiController {
         return ResponseEntity.ok(emailList);
     }
 
+    /**
+     * Get detailed information about people by their last name.
+     *
+     * @param lastName the last name of the people whose information is to be fetched
+     * @return a list of person details, or an empty list if no people with the specified last name are found
+     */
     @GetMapping("/personInfo")
     public ResponseEntity<List<Map<String, Object>>> getPersonInfo(@RequestParam String lastName) {
         List<Person> persons = personService.getAllPersonByLastname(lastName);
@@ -49,50 +61,54 @@ public class ApiController {
         return ResponseEntity.ok(personInfos);
     }
 
+    /**
+     * Get information about stations affected by floods, given a list of fire station numbers.
+     *
+     * @param stations the list of fire station numbers to check for flood information
+     * @return a list of fire stations with associated person information affected by floods, or an empty list if no data is found
+     */
     @GetMapping("/flood/stations")
     public ResponseEntity<List<Map<String, Object>>> getStationsFlood(@RequestParam List<Integer> stations) {
 
-        // Construire le résultat en traitant chaque station
         List<Map<String, Object>> result = stations.stream()
                 .map(station -> {
-                    // Récupérer les adresses pour la station
                     List<String> addresses = fireStationService.getAddressByFireStationsNumber(station);
                     if (addresses == null || addresses.isEmpty()) {
-                        return null; // Ignorer les stations sans adresses
+                        return null;
                     }
 
-                    // Récupérer les personnes associées aux adresses
                     List<Person> persons = addresses.stream()
                             .flatMap(address -> {
                                 List<Person> personsAtAddress = personService.getPersonsByAddress(address);
                                 return personsAtAddress != null ? personsAtAddress.stream() : Stream.empty();
                             })
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    // Transformer les personnes en informations détaillées
                     List<Map<String, Object>> personInfos = personInfoService.getAllPersonInfo(persons);
 
-                    // Retourner les données pour cette station
                     return Map.of(
                             "station", station,
                             "personInfos", personInfos
                     );
                 })
-                .filter(Objects::nonNull) // Filtrer les stations sans données
-                .filter(map -> !((List<?>) map.get("personInfos")).isEmpty()) // Filtrer les stations sans personnes
-                .collect(Collectors.toList());
+                .filter(Objects::nonNull)
+                .filter(map -> !((List<?>) map.get("personInfos")).isEmpty())
+                .toList();
 
-        // Si aucune donnée trouvée, retourner NOT_FOUND
         if (result.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(Collections.emptyList());
         }
 
-        // Retourner les résultats
         return ResponseEntity.ok(result);
     }
 
-
+    /**
+     * Get fire station information for a given address.
+     *
+     * @param address the address for which fire station information is to be fetched
+     * @return a list of fire station details for the address, or an empty list if no data is found
+     */
     @GetMapping("/fire")
     public ResponseEntity<List<Map<String, Object>>> getFire(@RequestParam String address) {
 
@@ -100,32 +116,31 @@ public class ApiController {
 
         List<Map<String, Object>> result = fireStations.stream()
                 .map(fireStation -> {
-
-                    // Récupérer les personnes associées aux adresses
                     List<Person> persons = personService.getPersonsByAddress(address);
-
-                    // Transformer les personnes en DTOs
                     List<Map<String, Object>> personInfos = personInfoService.getAllPersonInfo(persons);
 
-                    // Retourner les données pour cette station
                     return Map.of(
                             "station", fireStation.getStation(),
                             "personInfos", personInfos
                     );
                 })
-                .filter(map -> !((List<?>) map.get("personInfos")).isEmpty()) // Filtrer les stations sans personnes
-                .collect(Collectors.toList());
+                .filter(map -> !((List<?>) map.get("personInfos")).isEmpty())
+                .toList();
 
-        // Si aucune donnée trouvée, retourner NOT_FOUND
         if (result.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(Collections.emptyList());
         }
 
-        // Retourner les résultats
         return ResponseEntity.ok(result);
     }
 
+    /**
+     * Get a list of phone numbers for a given fire station number.
+     *
+     * @param fireStationNumber the fire station number to get phone alerts for
+     * @return a list of phone numbers associated with the fire station, or an empty list if no data is found
+     */
     @GetMapping("/phoneAlert")
     public ResponseEntity<List<String>> getPhoneAlert(@RequestParam int fireStationNumber) {
 
@@ -135,10 +150,9 @@ public class ApiController {
                     .body(Collections.emptyList());
         }
 
-        // Récupérer les personnes vivant à ces adresses
         List<Person> persons = addresses.stream()
                 .flatMap(address -> personService.getPersonsByAddress(address).stream())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> listPhone = personService.getAllPhoneByPersons(persons);
 
@@ -150,12 +164,17 @@ public class ApiController {
         return ResponseEntity.ok(listPhone);
     }
 
+    /**
+     * Get a list of children at a specific address.
+     *
+     * @param address the address for which child alerts are to be fetched
+     * @return a list of children and their details at the given address, or an empty list if no children are found
+     */
     @GetMapping("/childAlert")
     public ResponseEntity<List<Map<String, Object>>> getChildAlert(@RequestParam String address) {
 
         List<Map<String, Object>> result = personInfoService.getChildAlertByAddress(address);
 
-        // Si aucune donnée trouvée, retourner NOT_FOUND
         if (result.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(Collections.emptyList());
@@ -164,12 +183,17 @@ public class ApiController {
         return ResponseEntity.ok(result);
     }
 
+    /**
+     * Get coverage information by fire station number.
+     *
+     * @param stationNumber the fire station number to get coverage details for
+     * @return coverage information for the specified fire station, or an empty map if no data is found
+     */
     @GetMapping("/firestation")
     public ResponseEntity<Map<String, Object>> getCoverageByFireStation(@RequestParam int stationNumber) {
 
         Map<String, Object> result = personInfoService.getCoverageByFireStation(stationNumber);
 
-        // Si aucune donnée trouvée, retourner NOT_FOUND
         if (result.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(Collections.emptyMap());
